# shen-calc

./: .gitignore  README.md  project.yml
.claude/tracking/: charts.html  tracking.db
ShenCalc/: Bridging-Header.h  CASTools.swift  ContentView.swift  MLXInterpreter.swift  MathInterpreter.swift  MathKeyboard.swift  MathPretty.swift  ShenCAS.swift  ShenCalc.entitlements  ShenCalcApp.swift
ShenCalc/AI/: CloudProvider.swift  LLMProvider.swift  OnDeviceProvider.swift  VerifiedTutor.swift
ShenCalc/Learning/: Diagnostic.swift  FIRe.swift  Gamification.swift  KnowledgeGraph.swift  LearnerState.swift  LearningSession.swift  Mastery.swift  ProblemGenerator.swift  SpiralScheduler.swift
ShenCalc/Learning/CAS/: CASClient.swift  WorkedSolution.swift
ShenCalc/Learning/Generators/: EvalSubstituteGenerator.swift  FactorQuadraticGenerator.swift  GCFFactorGenerator.swift  GeneratorGrading.swift  IntArithGenerator.swift  LinearEquationMultiStepGenerator.swift  LinearEquationOneStepGenerator.swift  LinearExprGenerator.swift  LinearInequalityGenerator.swift  LinearSystem2x2Generator.swift  PolyArithGenerator.swift  QuadraticSolveGenerator.swift  RationalArithGenerator.swift  SpecialProductGenerator.swift
ShenCalc/Learning/State/: LearnerStore.swift
ShenCalc/Learning/Views/: ProgressMapView.swift  SessionRunnerView.swift  TutorRootView.swift
cas-engine/: Cargo.toml  README.md  build-xcframework.sh
cas-engine/cas/: cas-all.kl  cas-kernel.kl
cas-engine/examples/: regress.rs  repro.rs  trace.rs
cas-engine/include/: shencas.h
cas-engine/src/: lib.rs
cas-engine/swift/: cas-demo.swift
cas-engine/tests/: issue8_memo_soundness.rs
docs/tutor/: COVERAGE.md  DESIGN.md  ROADMAP.md
shencalc-iced/: Cargo.toml  README.md
shencalc-iced/src/: grammar.rs  main.rs  nl.rs  pretty.rs
